--- a/flow.css
+++ b/flow.css
@@ -7,22 +7,15 @@ body{
 		padding: 0;
 	}
 .pink{background-color:#ee3e64;
-	left:0px ;
-	top: 0px;
-	position: absolute;
+		position: static;
 		}
 .blue{background-color:#44accf;
-	right: 0px;
-	top: 0px;
-	position: absolute;
+		position: relative;
+		left: 200px;
 			}
 .green{background-color:#b7d84b;
-	left:0px ;
-	bottom: 0px;
-	position: absolute;
-		}
+		position: static;
+				}
 .yellow{background-color:yellow;
-	right: 0px;
-	bottom: 0px;
-	position: absolute;
+		position: static;
 		}
